# outlook-batch-manager

./: .gitignore  PROJECT_RULES.md  README.md  REGISTER_README.md  main.py  package-lock.json  package.json  pyproject.toml  start.ps1  startup.py
.trae/documents/: 批量注册功能整合方案.md  批量注册页面改造方案.md  线程池优化方案.md
backend/: install_browsers.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: accounts.py  deps.py  events.py  mail.py  proxy.py  register.py  settings.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/schemas/: accounts.py  mail.py  proxy.py  register.py  settings.py
backend/app/services/: auth.py  browser_installer.py  event_bus.py  imap_sync.py  import_export.py  register_service.py  secret_store.py  sync_service.py
backend/tests/: test_api.py  test_import_export.py
desktop/: backend-manager.js  backend-manager.test.js  main.js  package.json  preload.js
electron-app/: index.html  package-lock.json  package.json  vite.config.ts
electron-app/electron/: main.mjs  preload.mjs
electron-app/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
electron-app/src/components/: DetailDrawer.tsx  EmptyState.tsx  MetricCard.tsx  PageHeader.tsx  PageTitle.tsx  SelectionBar.tsx  StatCard.tsx  StatusBanner.tsx  ThemeSwitch.tsx
src/outlook_batch_manager/: __init__.py  app.py  bootstrap.py  cli.py  models.py
tests/: test_account_service.py  test_cli.py  test_connection_service.py  test_task_runner.py
ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  main.tsx
(+57 files in other folders)
