[project]
name = "outlook-batch-manager"
version = "0.1.0"
description = "Windows desktop app for Outlook/Hotmail account registration and management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<6.9",
    "playwright>=1.53,<1.55",
    "openpyxl>=3.1,<3.2",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
